--- a/sycl/doc/extensions/GroupAlgorithms/SYCL_INTEL_group_sort.asciidoc
+++ b/sycl/doc/extensions/GroupAlgorithms/SYCL_INTEL_group_sort.asciidoc
@@ -33,6 +33,8 @@ This extension is written against the SYCL 2020 revision 3 specification. All
 references below to the "core SYCL specification" or to section numbers in the
 SYCL specification refer to that revision.
 
+NOTE: This extension is experimental: interfaces are subject to change later.
+
 == Introduction
 
 This extension introduces sorting functions to the group algorithms library, along with
@@ -70,7 +72,7 @@ position `i` in the ordered range.
 
 [source,c++]
 ----
-namespace sycl::ext::oneapi {
+namespace sycl::ext::oneapi::experimental {
 
   template <typename GroupHelper, typename Ptr>
   void joint_sort(GroupHelper exec, Ptr first, Ptr last); // (1)
@@ -386,8 +388,6 @@ if `scope = sycl::memory_scope::sub_group`, `local_range` is a sub-group size.
 If other `scope` values are passed, behavior is unspecified.
 |===
 
-NOTE: Predefined sorters are in the `experimental` namespace: interfaces might be changed later.
-
 === Group Helper
 
 The overloads of `joint_sort` and `sort_over_group` that do not take a Sorter parameter implicitly
@@ -443,11 +443,8 @@ namespace sycl::ext::oneapi::experimental {
 }
 ----
 
-For most applications it's enough to pass an instance of the `group_with_scratchpad` class
+For most applications it is enough to pass an instance of the `group_with_scratchpad` class
 instead of their own classes creation.
-
-NOTE: `group_with_scratchpad` is in the `experimental` namespace:
-interfaces might be changed later.
 
 Table 9. Constructors of the `group_with_scratchpad` class.
 |===
@@ -483,11 +480,10 @@ that is handled by the `group_with_scratchpad` object.
 [source,c++]
 ----
 ...
-namespace my_sycl = sycl::ext::oneapi;
-namespace my_sycl_exp = sycl::ext::oneapi::experimental;
+namespace my_sycl = sycl::ext::oneapi::experimental;
 // calculate required local memory size
 size_t temp_memory_size =
-    my_sycl_exp::default_sorter<>::memory_required<T>(sycl::memory_scope::work_group, n);
+    my_sycl::default_sorter<>::memory_required<T>(sycl::memory_scope::work_group, n);
 
 q.submit([&](sycl::handler& h) {
   auto acc = sycl::accessor(buf, h);
@@ -500,7 +496,7 @@ q.submit([&](sycl::handler& h) {
 
       my_sycl::joint_sort(
         // create group helper using deduction guides
-        my_sycl_exp::group_with_scratchpad(
+        my_sycl::group_with_scratchpad(
           id.get_group(),
           sycl::span{scratch.get_pointer(), temp_memory_size}
         ),
@@ -517,12 +513,11 @@ q.submit([&](sycl::handler& h) {
 [source,c++]
 ----
 ...
-namespace my_sycl = sycl::ext::oneapi;
-namespace my_sycl_exp = sycl::ext::oneapi::experimental;
+namespace my_sycl = sycl::ext::oneapi::experimental;
 
 sycl::range<1> local_range{256};
 // predefine radix_sorter to calculate local memory size
-using RSorter = my_sycl_exp::radix_sorter<T, my_sycl_exp::sorting_order::descending>;
+using RSorter = my_sycl::radix_sorter<T, my_sycl::sorting_order::descending>;
 // calculate required local memory size
 size_t temp_memory_size =
     RSorter::memory_required(sycl::memory_scope::work_group, local_range);
@@ -556,12 +551,11 @@ for details.
 [source,c++]
 ----
 ...
-namespace my_sycl = sycl::ext::oneapi;
-namespace my_sycl_exp = sycl::ext::oneapi::experimental;
+namespace my_sycl = sycl::ext::oneapi::experimental;
 using TupleType = typename std::iterator_traits<oneapi::dpl::zip_iterator<T*, U*>>::value_type;
 // calculate required local memory size
 size_t temp_memory_size =
-    my_sycl_exp::default_sorter<>::memory_required<TupleType>(sycl::memory_scope::work_group, n);
+    my_sycl::default_sorter<>::memory_required<TupleType>(sycl::memory_scope::work_group, n);
 
 q.submit([&](sycl::handler& h) {
   auto keys_acc = sycl::accessor(keys_buf, h);
@@ -578,7 +572,7 @@ q.submit([&](sycl::handler& h) {
 
       my_sycl::joint_sort(
         // create group excutor using deduction guides
-        my_sycl_exp::group_with_scratchpad(
+        my_sycl::group_with_scratchpad(
           id.get_group(),
           sycl::span{scratch.get_pointer(), temp_memory_size}
         ),
